--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,9 @@ jobs:
         ghc:
           - "8.6.5"
           - "8.8.4"
+          - "8.10.7"
+          - "9.0.2"
+          - "9.2.2"
     steps:
     - uses: actions/checkout@v2
 
@@ -69,7 +72,7 @@ jobs:
       fail-fast: false
       matrix:
         stack: ["2.7.5"]
-        ghc: ["8.6.5", "8.8.4"]
+        ghc: ["8.6.5", "8.8.4", "8.10.7", "9.0.2"]
 
     steps:
     - uses: actions/checkout@v2
