--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,13 +18,14 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        cabal: ["3.6.2.0"]
+        cabal: ["3.8.1.0"]
         ghc:
           - "8.6.5"
           - "8.8.4"
           - "8.10.7"
           - "9.0.2"
-          - "9.2.2"
+          - "9.2.5"
+          - "9.4.4"
     steps:
     - uses: actions/checkout@v3
 
@@ -76,7 +77,7 @@ jobs:
       fail-fast: false
       matrix:
         stack: ["2.7.5"]
-        ghc: ["8.6.5", "8.8.4", "8.10.7", "9.0.2"]
+        ghc: ["8.6.5", "8.8.4", "8.10.7", "9.0.2", "9.2.5"]
 
     steps:
     - uses: actions/checkout@v3
