--- a/harg.cabal
+++ b/harg.cabal
@@ -67,15 +67,15 @@ library
     ghc-options:        -Wall -Wno-unticked-promoted-constructors
     build-depends:
         base >=4.7 && <5,
-        aeson >=1.4.2 && <1.6 || >=2.0 && <2.1,
+        aeson >=1.4.2 && <1.6 || >=2.0 && <2.2,
         barbies >=2.0.3 && <2.1,
         bytestring >=0.10.8 && <0.12,
         directory >=1.3.3 && <1.4,
         higgledy >=0.4.1 && <0.5,
-        optparse-applicative >=0.15.1 && <0.17,
+        optparse-applicative >=0.15.1 && <0.18,
         split >=0.2.3 && <0.3,
-        text >=1.2.3 && <1.3,
-        yaml >=0.11.0 && <0.12
+        text >=1.2.3 && <1.3 || >=2.0 && <2.1,
+        yaml >=0.11.0 && <0.11.9
 
 test-suite harg-test
     type:             exitcode-stdio-1.0
