--- a/harg.cabal
+++ b/harg.cabal
@@ -75,7 +75,7 @@ library
         optparse-applicative >=0.15.1 && <0.19,
         split >=0.2.3 && <0.3,
         text >=1.2.3 && <1.3 || >=2.0 && <2.1,
-        yaml >=0.11.0 && <0.11.9
+        yaml >=0.11.0 && <=0.11.11.2
 
 test-suite harg-test
     type:             exitcode-stdio-1.0
